# jameboy

./: Cargo.toml  README.md  notes.org
roms/: KRASNI.gb
src/: cpu.rs  disassembly.rs  joypad.rs  main.rs  memory.rs  opcode.rs  ppu.rs  util.rs
