[package]
name = "jameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = "0.23.0"
image = "0.24.8"
rand = { version="0.8.5", features=["small_rng"]}
